change config.yml to support multiple commands per line